--- a/android/signin/app/build.gradle
+++ b/android/signin/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     // Dependency for Google Sign-In
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    // Dependency for Google Drive
+    implementation 'com.google.android.gms:play-services-drive:17.0.0'
+
     // Dependencies for the REST API example
     implementation 'com.google.api-client:google-api-client:1.30.5'
     implementation 'com.google.api-client:google-api-client-android:1.30.5'
